--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,74 +1,43 @@
 <!DOCTYPE html>
-<html ng-app="cool-monitor">
+<html ng-app="cool-monitor" lang="en">
 	<head>
-		<link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-		<script type="text/javascript" src="angular.min.js"> </script>
-		<script type="text/javascript" src="app.js"> </script><!-- ref to our custom angular app -->
-	</head>
-	<body class="list-group" ng-controller="StoreController as store">
-			
-		<p> {{"hello" + " dude" + (5 + 6)}}</p>
+		<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'><!-- google fonts -->
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'><!-- google fonts -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" /><!-- bootstrap: ui widgets -->
+		<link rel="stylesheet" type="text/css" href="css/coolconnect.css" /><!-- custom css styles -->
 		
-		<div>
-			<div ng-repeat="product in store.products">
-				<h1> {{ product.name }} </h1>
-				<h2>  ${{ product.price }} </h2>
-				<p> {{ product.description }} </p>
-				<button ng-show="product.canPurchase">Add To Cart</button>
+		<script type="text/javascript" src="js/angular.min.js"> </script> <!-- angular code -->
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script><!-- google code that allows auto-download of stuff (google.load()) -->
+		<script type="text/javascript" src="js/coolconnect.js"> </script><!-- ref to our custom angular app -->
+	</head>
+	
+	<body>
+		<div id="mega-container">
+			<div id="title-container" class="card-container">
+				<span id="title"><span class="app-title">cool-connect:</span> current outage report</span>
+			</div>
+		
+			<div id="outage-container" class="card-container">
+		
+				<div id="clients-controller" ng-controller="ClientsController as clientList">
+					<div id="clients-list" class="list-group">
+						<button type="button" class="list-group-item" ng-repeat="client in clientList.clients" ng-click="clientList.updateOutages(client.name);">
+							{{ client.name }}
+						</button>
+					</div>
+				</div>
+		
+				<!-- graph of outages. */ -->
+				<div id="outages-timeline"></div>
+			
+				<!-- div id="outages-controller" ng-controller="OutagesController as outageList">
+					<table class="table table-hover">
+						<tr ng-repeat="outage in outageList">
+							<td> {{ outage.client }} </td>
+						</tr>
+					</table 
+				</div -->
 			</div>
 		</div>
-		
-		<ul class="list-group">
-			<li class="list-group-item" ng-repeat="product in store.products">
-				<h3> 
-					{{product.name}} 
-					<em class="pull-right">{{product.price | currency}}</em>
-				</h3>
-			</li>
-		</ul>
-		
-		<!-- section ng-init="tab = 1">
-			<ul class="nav nav-pills">
-				<li ng-class="{ active:tab === 1 }">
-					<a href ng-click="tab = 1">Description</a>
-				</li>
-				<li ng-class="{ active:tab === 2 }">
-					<a href ng-click="tab = 2">Specs</a>
-				</li>
-				<li ng-class="{ active:tab === 3 }">
-					<a href ng-click="tab = 3">Reviews</a>
-				</li>
-			</ul>
-		</section -->
-		
-		<section class="tab" ng-controller="PanelController as panel">
-			<ul class="nav nav-pills">
-				<li ng-class="{ active:panel.isSelected(1)}">
-					<a href ng-click="panel.selectTab(1)">Description</a>
-				</li>
-				<li ng-class="{ active:panel.isSelected(2) }">
-					<a href ng-click="panel.selectTab(2)">Specs</a>
-				</li>
-				<li ng-class="{ active:panel.isSelected(3)}">
-					<a href ng-click="panel.selectTab(3)">Reviews</a>
-				</li>
-			</ul>
-			
-			<div class="panel" ng-show="panel.isSelected(1)">
-				<h4>Description</h4>
-				<p>{{product.description}}</p>
-			</div>
-			<div class="panel" ng-show="panel.isSelected(2)">
-				<h4>Specs</h4>
-			
-			</div>
-			<div class="panel" ng-show="panel.isSelected(3)">
-				<h4>Reviews</h4>
-			
-			</div>
-		
-		</section>
-		
-
 	</body>
 </html>
